--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <table>
         <div id="ipod">iPod <span id="time">02:21</span> 🔋</div>
           <label>
-          <input id="inputField" type="input" readonly="readonly" placeholder="0" autocomplete="off"></br>
+          <input id="inputField" type="input" readonly="readonly" placeholder="0" autocomplete="off" maxlength="5"></br>
           <tr class="buttons">
             <td class = "operators upper" id = "ac">AC</td>
             <td class = "operators upper">+/−</td>
