--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
     <body>
-
         <head>
             <link rel ="stylesheet" type="text/css" href="style.css">
         </head>
         
         <table>
-        <div id="ipod">iPod <span id="time">02:21</span> 🔋</div>
+        <div id="ipod">iPhone
+          <span id="time"></span>
+          <div id="battery">🔋</div>
+        </div>
           <label>
           <input id="inputField" type="input" readonly="readonly" placeholder="0" autocomplete="off"></br>
           <tr class="buttons">
@@ -39,7 +41,6 @@
             <td class = "operators operacolors equals">=</td>
           </tr>
         </table>
-
     </body>
 
     <script src = "script.js"></script>
